force-app/main/default/objects/fferpcore__MessagingDelivery__c/fields/fferpcore__Chunk__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Chunk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chunk</label>
    <referenceTo>fferpcore__Chunk__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>