force-app/main/default/objects/fferpcore__MessagingDelivery__c/fields/fferpcore__Message__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Message__c</fullName>
    <description>Message that this Delivery belongs to</description>
    <label>Message</label>
    <referenceTo>fferpcore__MessagingMessage__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>