force-app/main/default/objects/fferpcore__MessagingDelivery__c/fields/fferpcore__State__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__State__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Filtered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>